feat(client): added history display
