# backend/routes/ApiRouter.ts
@@ -19,6 +19,7 @@ ApiRouter.post("/login", AuthorizationController.handleAction("login"));
 ApiRouter.post("/register", AuthorizationController.handleAction("register"));
 ApiRouter.post("/admin/receptions", ReceptionsController.handleAction("receptions"));
 ApiRouter.post("/admin/transit", TransitController.handleAction("transit"));
+ApiRouter.get("/user", UserController.handleAction("user"));
 ApiRouter.get("/user/orders", UserController.handleAction("orders"));
 ApiRouter.post("/user/order", UserController.handleAction("order"));
 ApiRouter.get("/order", OrderController.handleAction("order"));
